fixed leaderboard flex spacing issue

--- a/frontend/src/sass/components/_leadCard.scss
+++ b/frontend/src/sass/components/_leadCard.scss
@@ -33,8 +33,12 @@
   }
 
   &__center {
-    flex: 1;
+    flex: 2;
     padding-left: 5rem;
+
+    @include respond(phone) {
+      flex: 4;
+    }
     
     &-questions {
       font-family: inherit;
